--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-lightnpng",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Converts a Buffer to PNG format -- very, very quickly.",
   "main": "index.js",
   "dependencies": {
@@ -8,7 +8,7 @@
     "nan": "^2.4.0"
   },
   "devDependencies": {
-    "canvas": "adamhooper/node-canvas#toBuffer-raw",
+    "canvas": "^1.6.6",
     "mocha": "^3.1.0"
   },
   "scripts": {
