--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,19 @@ node_js:
 os:
   - linux
   - osx
+
+addons:
+  apt:
+    packages:
+      - libcairo2-dev
+      - libjpeg8-dev
+      - libpango1.0-dev
+      - libgif-dev
+      - build-essential
+      - g++
+
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install pkg-config cairo pango libpng jpeg giflib; fi
+
 script:
   - npm test
