--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
       - g++
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install pkg-config cairo pango libpng jpeg giflib; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install cairo pango; fi
 
 script:
   - npm test
